--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.1.3",
+    "@faker-js/faker": "^9.9.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
