--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@electron/remote": "^2.1.3",
     "@faker-js/faker": "^9.9.0",
+    "cheerio": "^1.1.0",
+    "node-fetch": "^2.7.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
